--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: GET and POST checks 
+name: GET and POST tests 
 
 on:
   schedule:
@@ -9,7 +9,7 @@ on:
 #################### GET ######################
 
 jobs:
-  API_GET :
+  API_GET:
     #runs-on: self-hosted
     runs-on: ubuntu-latest
 
@@ -52,23 +52,11 @@ jobs:
         with:
           name: test-report
           path: Reports/*
-          
-      - name: Export status
-        if: ${{ always() }}      
-        run: |
-          API_STATUS=${{ job.status }}
-          echo "API_STATUS=$API_STATUS" >> $GITHUB_ENV
-      - name: Export variable for next jobs
-        if: ${{ always() }}      
-        uses: UnlyEd/github-action-store-variable@v2.1.0
-        with:
-          variables: |
-            API_STATUS=${{ env.API_STATUS }}
 
 
     #################### POST ######################
 
-    API_POST :
+    API_POST:
     runs-on: ubuntu-latest
 
     strategy:
@@ -110,15 +98,3 @@ jobs:
         with:
           name: test-report
           path: Reports/*
-          
-      - name: Export status
-        if: ${{ always() }}      
-        run: |
-          API_STATUS=${{ job.status }}
-          echo "API_STATUS=$API_STATUS" >> $GITHUB_ENV
-      - name: Export variable for next jobs
-        if: ${{ always() }}      
-        uses: UnlyEd/github-action-store-variable@v2.1.0
-        with:
-          variables: |
-            API_STATUS=${{ env.API_STATUS }}
