--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   API_tests:
     #runs-on: self-hosted
-    runs-on: workflow_dispatch
+    on: workflow_dispatch
 
     strategy:
       matrix:
