--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Run API tests
         run: |
-          robot -i api -x results -T -d Reports/.
+          robot -x results -T -d Reports/ -i api.
 
       - name: Archive test results
         if: ${{ always() }}
